added some images to our products page

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -13,7 +13,7 @@
 	</div>
 </nav>
 <div class="container">
-	<div class="banner" style="background-image: url('https://media.istockphoto.com/id/1400876476/photo/colorful-dried-fruits-with-berries-assorted-nuts-and-seeds-healthy-food-background.jpg?s=612x612&w=0&k=20&c=MNLsZvGl6cJeS1CCIHySCDesEHUu1d9ZNjKFEo7NK7M=');">
+	<div class="banner" style="background-image: url(https://media.istockphoto.com/id/1385684038/photo/mix-nuts-and-dried-fruit-on-table-background.jpg?s=612x612&w=0&k=20&c=uNnq6CIxxtsqylTrK5Iv0JA9ItuQPhUSV_CY5YCdkmA=">
 		<h1>MAMOCHOU COMPANY</h1>
 		<h2>Premium Dried Fruits & Nuts Exporter</h2>
 		<p>
